force-app/main/default/objects/Attendance__c/fields/Marked_By__c.field-meta.xml
<CustomField>
    <fullName>Marked_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marked By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Attendance_Records</relationshipName>
    <type>Lookup</type>
</CustomField>