force-app/main/default/objects/Attendance__c/fields/Student_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_Name__c</fullName>
    <formula>Enrollment__r.Student__r.First_Name__c &amp; &quot; &quot; &amp; Enrollment__r.Student__r.Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student Name</label>
    <type>Text</type>
</CustomField>