force-app/main/default/objects/Attendance__c/validationRules/Attendance_Date_Not_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Attendance_Date_Not_Future</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK( Date__c )),
   Date__c  &gt; TODAY()
)</errorConditionFormula>
    <errorDisplayField>Date__c</errorDisplayField>
    <errorMessage>Attendance Date cannot be in the future</errorMessage>
</ValidationRule>