force-app/main/default/objects/Attendance__c/validationRules/Attendance_Not_Before_EnrollmentStart.validationRule-meta.xml
<ValidationRule>
    <fullName>Attendance_Not_Before_EnrollmentStart</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK( Date__c )),
  NOT(ISBLANK( Enrollment__r.Enrollment_Date__c )),
   Date__c  &lt;  Enrollment__r.Enrollment_Date__c 
)</errorConditionFormula>
    <errorDisplayField>Date__c</errorDisplayField>
    <errorMessage>Attendance cannot be before the student’s enrollment start date</errorMessage>
</ValidationRule>