force-app/main/default/objects/Attendance__c/validationRules/Enrollment_Link_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Enrollment_Link_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Enrollment__c)</errorConditionFormula>
    <errorDisplayField>Enrollment__c</errorDisplayField>
    <errorMessage>Attendance must be linked to a valid Enrollment record</errorMessage>
</ValidationRule>